# FRC-2023

./: .gitignore  FRC_20230128_045836.wpilog  FRC_20230128_050710.wpilog  FRC_20230128_075348.wpilog  FRC_20230128_195738.wpilog  FRC_20230128_213506.wpilog  FRC_20230128_213623.wpilog  FRC_20230128_214052.wpilog  FRC_20230128_214236.wpilog  FRC_20230128_214336.wpilog  FRC_20230128_214431.wpilog  FRC_20230128_214519.wpilog  FRC_20230128_214755.wpilog  FRC_20230128_214907.wpilog  FRC_20230128_214946.wpilog  FRC_20230128_215236.wpilog  FRC_20230128_215629.wpilog  FRC_20230128_215653.wpilog  build.gradle  makefile  simgui.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml
.roboRIOTeamNumberSetter/: roborioteamnumbersetter.json
.wpilib/: wpilib_preferences.json
pfchangs/: README.md  settings.gradle
pfchangs/app/: build.gradle
re-fchangs/: .gitignore  README.md  startup.bat
re-fchangs/mcljava/: settings.gradle
re-fchangs/mcljava/app/: build.gradle
re-fchangs/rust/: .gitignore  Cargo.toml
re-fchangs/rust/benches/: mcl_benchmark.rs
re-fchangs/rust/src/: amcl.rs  constants.rs  lib.rs  main.rs  math_util.rs  particle.rs  point3.rs  robot_data.rs  tag.rs  tag_distance.rs
src/main/deploy/pathplanner/: Bottom 2 Piece.path  Bottom Balance Pickup.path  Bottom Path Part 1.path  Bottom Path Part 2.path  Bottom Path.path  Happy boy ;D.path  Middle Path Builder No Pickup.path  Middle Path Builder.path  Middle Path Part 2.path  Middle Path.path  New Path.path  (+10 more)
testclient/app/: build.gradle
vendordeps/: AdvantageKit.json  REVLib.json  photonlib.json
(+224 files in other folders)
