[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
crossbeam = { version = "0.8.2", features = [
    "alloc",
    "std",
    "crossbeam-queue",
] }
lazy_static = "1.4.0"
num = "0.4.0"
rand = { version = "0.8.5", features = [
    "default",
    "packed_simd",
    "simd_support",
    "small_rng",
] }
rand_distr = "0.4.3"
serde = { version = "1.0.159", features = [
    "default",
    "std",
    "derive",
    "serde_derive",
] }
serde_json = "1.0.95"

[[bench]]
name = "mcl_benchmark"
harness = false
